--- a/Badammi/about-us.html
+++ b/Badammi/about-us.html
@@ -7,8 +7,8 @@
         <meta charset="utf-8">
         <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="agency, ecommerce">
-        <meta name="author" content="Md. Siful Islam, Jtheme">
+        <meta name="description" content="Fruits,Nuts,Vegetables">
+        <meta name="author" content="Badammi">
 
         <title>Badammi</title>
 
@@ -24,6 +24,7 @@
         <link href="assets/css/plugin/bootstrap-select.min.css" rel="stylesheet" type="text/css"> 
         <link href="assets/css/plugin/owl.carousel.css" rel="stylesheet" type="text/css">
         <link href="assets/css/plugin/animate.css" rel="stylesheet" type="text/css"> 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
         <!-- Custom CSS -->
         <link href="assets/css/theme.css" rel="stylesheet" type="text/css">
@@ -79,16 +80,7 @@
             <!-- / Main Header Ends -->   
 
             <!--Breadcrumb Section Start-->
-            <section class="breadcrumb-bg">                
-                <div class="theme-container container ">                       
-                    <div class="site-breadcumb white-clr">                        
-                        <h2 class="section-title"> <span class="light-font">about </span> <strong class="clr-txt">naturix </strong> <span class="light-font">farmfood </span> </h2>
-                        <ol class="breadcrumb breadcrumb-menubar">
-                            <li> <a href="#"> Home </a> About  </li>                             
-                        </ol>
-                    </div>  
-                </div>
-            </section>
+            
             <!--Breadcrumb Section End-->
 
             <!-- Organic Farmfood Starts-->
@@ -112,40 +104,39 @@
                 <div class="container rel-div">
                     <div class="row">
                         <div class="col-sm-6 text-right fsz-16 pt-15 xs-text">
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam  enim ad minim veniam, quis nostrud exerci tation.</p>
+                            <p>At Badammi, we combine the beauty of nature with modern processing to deliver the purest organic taste.Our farms and production facilities work hand in hand — from carefully grown fruits and nuts to advanced packaging systems that preserve their freshness.Every year, we proudly export our high-quality dried fruits, nuts, and fresh produce to markets in Turkey, Russia, and beyond, sharing the authentic flavor of our land with the world.For us, it’s not just business — it’s a passion for nature, quality, and health.</p>
                         </div>
                         <div class="col-sm-6 text-left xs-text">
                             <h2 class="section-title"> <span class="light-font">we are </span> <strong>organic farmfood <img src="assets/img/icons/logo-icon.png" alt="" /> </strong> </h2>
-                            <h4 class="sub-title"> ABOUT NATURIX FARMFOOD </h4>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-3 col-sm-6 text-center">
                             <div class="feature-wrap">
                                 <img src="assets/img/extra/feature-1.png" alt="" />
-                                <h3 class="title-1 ptb-15"> <span class="light-font">fresh from </span> <strong> naturix farm</strong> </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.  </p>
+                                <h3 class="title-1 ptb-15"> <span class="light-font">fresh from </span> <strong> nature’s heart</strong> </h3>
+                                <p>Hand-picked from the most fertile orchards, our fruits are nurtured by sunlight and pure soil — bringing you freshness that tastes real.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 text-center">
                             <div class="feature-wrap">
                                 <img src="assets/img/extra/feature-2.png" alt="" />
-                                <h3 class="title-1 ptb-15"> <span class="light-font"> 100%</span> <strong> organic goods</strong> </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.  </p>
+                                <h3 class="title-1 ptb-15"> <span class="light-font"> 100%</span> <strong> Organic Goods</strong> </h3>
+                                <p>Pure. Honest. Organic.We believe true quality starts at the source. Every Badammi product is made from 100% organically grown fruits — with nothing artificial, ever.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 text-center">
                             <div class="feature-wrap">
                                 <img src="assets/img/extra/feature-3.png" alt="" />
-                                <h3 class="title-1 ptb-15"> <span class="light-font">premium </span> <strong> quality</strong> </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.  </p>
+                                <h3 class="title-1 ptb-15"> <span class="light-font"> Premium</span> <strong>Quality</strong> </h3>
+                                <p> Crafted with care, trusted for quality From harvest to packaging, every step meets the highest standards. Because premium isn’t just a label — it’s our way of doing things.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 text-center">
                             <div class="feature-wrap">
                                 <img src="assets/img/extra/feature-4.png" alt="" />
-                                <h3 class="title-1 ptb-15"> <span class="light-font">100% </span> <strong>natural</strong> </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.  </p>
+                                <h3 class="title-1 ptb-15"> <span class="light-font">100% </span> <strong>Natural</strong> </h3>
+                                <p>Only what nature intended.No preservatives. No additives. Just nature’s own perfection — pure, simple, and full of life.</p>
                             </div>
                         </div>
                     </div>
@@ -166,12 +157,11 @@
 
                 <div class="container rel-div">
                     <div class="title-wrap pt-15">                       
-                        <h4 class="fsz-20"> <strong>naturix</strong> <span class="light-font">  organic farmfood since 1990 </span> </h4>
                         <h2 class="fsz-50 over-txt-title"> 
                             <span class="light-font"> WE DO <span class="over-txt light-bg">100% ORGANIC GUARANTEE</span> </span> 
                             <strong>HEALTHY</strong> 
                         </h2>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud ullamcorper . </p>
+                        <p>We believe that real health begins with real food.That’s why we grow, harvest, and process every fruit and nut with the utmost care — keeping them pure, fresh, and naturally nutritious.From farm to table, we stay true to our promise: 100% organic, 100% healthy.</p>
                     </div>
 
                     <div class="about-wrap"> 
@@ -223,7 +213,7 @@
                                     <div class="organic-prod">
                                         <img src="assets/img/extra/organic-3.png" alt="" />
                                         <span class="divider"></span>
-                                        <h3 class="title-1"> <a href="#"> <span class="light-font">dried </span> <strong> fruits</strong> </a> </h3>
+                                        <h3 class="title-1"> <a href="#"> <span class="light-font">fresh </span> <strong> fruits</strong> </a> </h3>
                                     </div>
                                 </div>
                             </div>
@@ -232,7 +222,7 @@
                             <div class="organic-prod-info">
                                 <h4 class="sub-title">  FRESH FROM OUR FARM </h4>
                                 <h2 class="section-title ptb-15"> <span class="light-font">220+ </span> <strong>fruits, vegetables </strong> <span class="light-font"> & </span> <strong> lot more</strong> </h2>
-                                <p class="fsz-16">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </p>
+                                <p class="fsz-16">Experience nature’s richness in every bite — over 100+ organic products, from juicy fruits and crisp vegetables to premium nuts and dried fruits.We bring the taste of purity straight from the farm to you.</p>
                             </div>
                         </div>
                     </div>
@@ -270,8 +260,21 @@
                                 <h2 class="title-1">  <span class="light-font">badammi  </span> <strong>information </strong> </h2>
                                 <span class="divider-2"></span>
                                 <ul class="list">
-                                    <li> <a href="about-us.html"> about our shop </a> </li>
-                                    <li> <a href="index.html"> our blog </a> </li>
+                                    <li> <a href="about-us.html"> About us </a> </li>
+                                    <li> <a href="index.html"> All Producs </a> </li>
+                                    <li>
+                                        <div class="social-icons" style="margin-top: 15px;">
+                                            <a href="https://www.youtube.com/" target="_blank" style="margin-right: 10px; color: #ff0000;">
+                                                <i class="fab fa-youtube fa-lg"></i>
+                                            </a>
+                                            <a href="https://www.facebook.com/" target="_blank" style="margin-right: 10px; color: #1877f2;">
+                                                <i class="fab fa-facebook fa-lg"></i>
+                                            </a>
+                                            <a href="https://www.instagram.com/" target="_blank" style="color: #e4405f;">
+                                                <i class="fab fa-instagram fa-lg"></i>
+                                            </a>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -324,7 +327,7 @@
 
 <script>
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "http://40.83.191.148:5000/Fruits/GetAllFruits";
+    const apiUrl = "http://98.67.191.173:5000/Fruits/GetAllFruits";
 
     try {
         const response = await fetch(apiUrl, {
