--- a/Badammi/index.html
+++ b/Badammi/index.html
@@ -8,8 +8,8 @@
         <meta charset="utf-8">
         <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="agency, ecommerce">
-        <meta name="author" content="Md. Siful Islam, Jtheme">
+        <meta name="description" content="Fruits,Nuts,Vegetables">
+        <meta name="author" content="Badammi">
 
         <title>Badammi</title>
 
@@ -26,6 +26,7 @@
         <link href="assets/css/plugin/animate.css" rel="stylesheet" type="text/css"> 
         <link href="assets/css/plugin/subscribe-better.css" rel="stylesheet" type="text/css"> 
         <link href="assets/css/plugin/owl.carousel.min.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
         <!-- Custom CSS -->
         <link href="assets/css/theme.css" rel="stylesheet" type="text/css">
 
@@ -102,11 +103,6 @@
                                         <div class="slide-title">
                                         </div>
                                         <div class="slide-title2 pb-50">
-                                            <h2 class="section-title"> <span>Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
-                                            <h4 class="sub-title"> ORGANIC FRUITS, VEGETABLES, AND LOT MORE TO YOUR DOOR </h4>
-                                        </div>
-                                        <div class="slide">
-                                            <a href="#" class="slide-btn"> Shop Now</a>  
                                         </div>
                                     </div>
                                 </div>
@@ -122,11 +118,6 @@
                                         <div class="slide-title">
                                         </div>
                                         <div class="slide-title2 pb-50">
-                                            <h2 class="section-title"> <span class="light-font">Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
-                                            <h4 class="sub-title"> ORGANIC FRUITS, VEGETABLES, AND LOT MORE TO YOUR DOOR </h4>
-                                        </div>
-                                        <div class="slide">
-                                            <a href="#" class="slide-btn"> Shop Now</a>  
                                         </div>
                                     </div>
                                 </div>
@@ -142,11 +133,6 @@
                                         <div class="slide-title">
                                         </div>
                                         <div class="slide-title2 pb-50">
-                                            <h2 class="section-title"> <span class="light-font">Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
-                                            <h4 class="sub-title"> ORGANIC FRUITS, VEGETABLES, AND LOT MORE TO YOUR DOOR </h4>
-                                        </div>
-                                        <div class="slide">
-                                            <a href="#" class="slide-btn"> Shop Now</a>  
                                         </div>
                                     </div>
                                 </div>
@@ -162,11 +148,6 @@
                                         <div class="slide-title">
                                         </div>
                                         <div class="slide-title2 pb-50">
-                                            <h2 class="section-title"> <span class="light-font">Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
-                                            <h4 class="sub-title"> ORGANIC FRUITS, VEGETABLES, AND LOT MORE TO YOUR DOOR </h4>
-                                        </div>
-                                        <div class="slide">
-                                            <a href="#" class="slide-btn"> Shop Now</a>  
                                         </div>
                                     </div>
                                 </div>
@@ -182,11 +163,6 @@
                                         <div class="slide-title">
                                         </div>
                                         <div class="slide-title2 pb-50">
-                                            <h2 class="section-title"> <span class="light-font">Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
-                                            <h4 class="sub-title"> ORGANIC FRUITS, VEGETABLES, AND LOT MORE TO YOUR DOOR </h4>
-                                        </div>
-                                        <div class="slide">
-                                            <a href="#" class="slide-btn"> Shop Now</a>  
                                         </div>
                                     </div>
                                 </div>
@@ -202,11 +178,6 @@
                                         <div class="slide-title">
                                         </div>
                                         <div class="slide-title2 pb-50">
-                                            <h2 class="section-title"> <span class="light-font">Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
-                                            <h4 class="sub-title"> ORGANIC FRUITS, VEGETABLES, AND LOT MORE TO YOUR DOOR </h4>
-                                        </div>
-                                        <div class="slide">
-                                            <a href="#" class="slide-btn"> Shop Now</a>  
                                         </div>
                                     </div>
                                 </div>
@@ -248,37 +219,37 @@
 
                 <div class="container rel-div">
                     <div class="title-wrap">
-                        <h2 class="section-title"> <span class="light-font">we are </span> <strong>organic farmfood <img src="assets/img/icons/logo-icon.png" alt="" /> </strong> </h2>
-                        <h4 class="sub-title"> <span> ABOUT NATURIX FARMFOOD </span> </h4>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </p>
+                        <h2 class="section-title"> <span class="light-font">we are </span> <strong>organic badammi<img src="assets/img/icons/logo-icon.png" alt="" /> </strong> </h2>
+                        <h4 class="sub-title"> <span> ABOUT BADAMMI </span> </h4>
+                        <p>We’re passionate about bringing you 100% natural, organic fruits that taste just as nature intended. From vibrant dried apricots and figs to juicy seasonal fruits, every bite is a celebration of quality and care. At Badammi, we don’t just sell fruits — we share a lifestyle built on health, honesty, and harmony with nature. </p>
                     </div>
                     <div class="row">
                         <div class="col-md-3 col-sm-6 text-center">
                             <div class="feature-wrap">
                                 <img src="assets/img/extra/feature-1.png" alt="" />
-                                <h3 class="title-1 ptb-15"> <span class="light-font">fresh from </span> <strong> naturix farm</strong> </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.  </p>
+                                <h3 class="title-1 ptb-15"> <span class="light-font">Fresh from </span> <strong>Nature’s Heart</strong> </h3>
+                                <p>Hand-picked from the most fertile orchards, our fruits are nurtured by sunlight and pure soil — bringing you freshness that tastes real.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 text-center">
                             <div class="feature-wrap">
                                 <img src="assets/img/extra/feature-2.png" alt="" />
-                                <h3 class="title-1 ptb-15"> <span class="light-font"> 100%</span> <strong> organic goods</strong> </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.  </p>
+                                <h3 class="title-1 ptb-15"> <span class="light-font"> 100%</span> <strong> Organic Goods</strong> </h3>
+                                <p>Pure. Honest. Organic.We believe true quality starts at the source. Every Badammi product is made from 100% organically grown fruits — with nothing artificial, ever.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 text-center">
                             <div class="feature-wrap">
                                 <img src="assets/img/extra/feature-3.png" alt="" />
-                                <h3 class="title-1 ptb-15"> <span class="light-font">premium </span> <strong> quality</strong> </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.  </p>
+                                <h3 class="title-1 ptb-15"> <span class="light-font">Premium </span> <strong> Quality</strong> </h3>
+                                <p>Crafted with care, trusted for quality From harvest to packaging, every step meets the highest standards. Because premium isn’t just a label — it’s our way of doing things.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 text-center">
                             <div class="feature-wrap">
                                 <img src="assets/img/extra/feature-4.png" alt="" />
-                                <h3 class="title-1 ptb-15"> <span class="light-font">100% </span> <strong>natural</strong> </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.  </p>
+                                <h3 class="title-1 ptb-15"> <span class="light-font">100% </span> <strong>Natural</strong> </h3>
+                                <p>Only what nature intended No preservatives. No additives. Just nature’s own perfection — pure, simple, and full of life.</p>
                             </div>
                         </div>
                     </div>
@@ -300,7 +271,7 @@
                                     <div class="organic-prod">
                                         <img src="assets/img/extra/organic-1.png" alt="" />
                                         <span class="divider"></span>
-                                        <h3 class="title-1"> <a href="#"> <span class="light-font">organic </span> <strong> fruits</strong> </a> </h3>                                        
+                                        <h3 class="title-1"> <a href="#"> <span class="light-font">organic </span> <strong> nuts</strong> </a> </h3>                                        
                                         <a class="clr-txt font-2" href="#"> <i> </i> </a>
                                     </div>
                                 </div>
@@ -315,7 +286,7 @@
                                     <div class="organic-prod">
                                         <img src="assets/img/extra/organic-3.png" alt="" />
                                         <span class="divider"></span>
-                                        <h3 class="title-1"> <a href="#"> <span class="light-font">dried </span> <strong> fruits</strong> </a> </h3>
+                                        <h3 class="title-1"> <a href="#"> <span class="light-font">fresh </span> <strong> fruits</strong> </a> </h3>
                                     </div>
                                 </div>
                             </div>
@@ -324,7 +295,7 @@
                             <div class="organic-prod-info">
                                 <h4 class="sub-title">  FRESH FROM OUR FARM </h4>
                                 <h2 class="section-title ptb-15"> <span class="light-font">220+ </span> <strong>fruits, vegetables </strong> <span class="light-font"> & </span> <strong> lot more</strong> </h2>
-                                <p class="fsz-16">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </p>
+                                <p class="fsz-16">Experience nature’s richness in every bite — over 100+ organic products from juicy fruits and crisp vegetables to premium nuts and dried fruits. We bring the taste of purity straight from the farm to you.</p>
                             </div>
                         </div>
                     </div>
@@ -375,10 +346,24 @@
                                 <h2 class="title-1">  <span class="light-font">badammi  </span> <strong>information </strong> </h2>
                                 <span class="divider-2"></span>
                                 <ul class="list">
-                                    <li> <a href="about-us.html"> about our shop </a> </li>
-                                    <li> <a href="index.html"> our blog </a> </li>
+                                    <li> <a href="about-us.html"> About us </a> </li>
+                                    <li> <a href="index.html"> All Producs </a> </li>
+                                    <li>
+                                        <div class="social-icons" style="margin-top: 15px;">
+                                            <a href="https://www.youtube.com/" target="_blank" style="margin-right: 10px; color: #ff0000;">
+                                                <i class="fab fa-youtube fa-lg"></i>
+                                            </a>
+                                            <a href="https://www.facebook.com/" target="_blank" style="margin-right: 10px; color: #1877f2;">
+                                                <i class="fab fa-facebook fa-lg"></i>
+                                            </a>
+                                            <a href="https://www.instagram.com/" target="_blank" style="color: #e4405f;">
+                                                <i class="fab fa-instagram fa-lg"></i>
+                                            </a>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
+                             
                         </div>
                     </div>
                 </section>
@@ -402,7 +387,7 @@
 
         <script>
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "http://40.83.191.148:5000/Fruits/GetAllFruits";
+    const apiUrl = "http://98.67.191.173:5000/Fruits/GetAllFruits";
 
     try {
         const response = await fetch(apiUrl, {
