Add More Product Change Design

--- a/Badammi/shop-1.html
+++ b/Badammi/shop-1.html
@@ -150,7 +150,8 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="tab-content shop-content"> <div id="grid-view" class="tab-pane fade active in" role="tabpanel">
+                    <div class="tab-content shop-content"> 
+                        <div id="grid-view" class="tab-pane fade active in" role="tabpanel">
                             <div id="product" class="row"> 
                                 
                             </div>
